react-app/src/components/layouts/navbar-section/styles.scss
@import "../../../theme";

.NavbarSectionLayout {
  overflow: auto; // Create a new block formatting context.
  width: 100%;
  background-color: white;
  z-index: 100;
  margin: 0 auto;
}

.top-bar {
  margin-top: 1.25rem;
  margin-bottom: 1.3125rem;

  &__center-side {
    display: flex;
    align-items: center;
    justify-content: center;
    // height: 64px;
  }

  &__left-side {
    display: flex;
    align-items: center;
    // height: 64px;
  }

  &__logo-link {
    display: inline-block;
    width: 106px;
  }

  &__logo {
    height: 25px;
  }

  &__login-btn {
    border-radius: 25px;
    padding-left: 13px;
    padding-right: 13px;
  }

  &__currency {
    // width: 53px;
    // right: 7px;
    position: relative;
    // top: 0.9375rem;
  }
  &__lang {
    position: relative;
    // top: 0.9375rem;
  }
}

.top-bar__search-sm {
  padding: 0 0.81rem 1rem 0.81rem;
}

